Update de novo design para a pagina

--- a/style/style.css
+++ b/style/style.css
@@ -81,14 +81,27 @@ label {
 
 button {
     background-color: #584ECB;
-    color: #F8FD00;
+    color: #ffffff;
     margin: auto;
     padding: 10px 95px;
     display: block;
     font-family: 'Abhaya Libre', serif;
     border: 1px solid #000000;
     border-radius: 5px;
-    
+}
+
+button:hover {
+    background-color: #483bd3;
+    color: whitesmoke;
+    opacity: .8;
+}
+
+ul li {
+    margin-top: 10px;
+    margin-bottom: 20px;
+    padding: 0px 10px 0px 0px;
+    list-style-type: none;
+    display: inline-block;
 }
 
 @media screen and (max-width: 400px) {
